--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <base target="_blank">
   <meta charset="UTF-8" />
   <title> Vignesh Web Developer</title>
-  <link rel="shortcut icon" type="image/png" href="assets/favicon.png">
+  
+  <link rel="shortcut icon" type="image/jpg" href="assets/resume_icon.jpg">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css" />
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" type="text/css">
@@ -18,7 +19,7 @@
 
 <div id="particles">
   <div id="intro">
-      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Vignesh Web Developer&nbsp<a href="Vignesh_resume.pdf" style="color: white;"><img src="https://png.icons8.com/office/40/000000/open-resume.png" height="35" width="35"></a></h2>
+      <h2 style="font-family: 'Syncopate', sans-serif; font-weight: 10;">Vignesh Web Developer&nbsp<a href="Vignesh_resume.pdf" style="color: white;"><img src="assets/resume_icon.jpg" height="35" width="35"></a></h2>
         <hr style="width: 50%; background-color: #E83951; border-color: #E83951;">
     <a href="https://www.linkedin.com/in/vignesh-lakshmanan-developer/" style="color: white;"><i class="fab fa-linkedin" style="font-size: 2em;"></i></a>
     &nbsp
